edited blurblock styles, fixed overflow

--- a/allplasticworld/src/components/blurblock/Blurblock.module.css
+++ b/allplasticworld/src/components/blurblock/Blurblock.module.css
@@ -1,1 +1,3 @@
-/*# sourceMappingURL=Blurblock.module.css.map */
+.blur_block {
+  @apply bg-blur w-96 h-96 md:w-1250 md:h-720 lg:w-1550 lg:h-920 blur-3xl z-blurZindex absolute;
+}/*# sourceMappingURL=Blurblock.module.css.map */
